<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <import type="android.view.View"/>
  </data>

  <LinearLayout
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_bottom_border"
    android:foreground="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/distance_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:layout_centerInParent="true"
          android:minWidth="100dp"
          android:text="@string/distance_text"
          android:textColor="@color/black"/>

        <TextView
          android:id="@+id/distance"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:layout_toEndOf="@+id/distance_text"
          android:text="0m"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/black"/>

        <TextView
          android:id="@+id/start_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_centerInParent="true"
          android:text="@string/time"/>

      </RelativeLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="100dp"
          android:text="@string/duration"
          android:textColor="@color/black"/>

        <TextView
          android:id="@+id/duration"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="00:00"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/black"/>
      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:minWidth="100dp"
          android:text="@string/average_speed"
          android:textColor="@color/black"/>

        <TextView
          android:id="@+id/average_speed"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="0,0 m/s"
          android:textAppearance="@style/TextAppearance.AppCompat.Medium"
          android:textColor="@color/black"/>

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

</layout>