<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>
    <import type="android.view.View"/>
    <variable
      name="status"
      type="String"/>
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom">

        <fragment
          android:id="@+id/fragment"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.SupportMapFragment"/>

      </FrameLayout>

      <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="8dp"
          android:orientation="horizontal"
          android:visibility="visible">

          <ImageView
            android:id="@+id/img_activity"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="#606060"/>

          <TextView
            android:id="@+id/txt_activity"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

          <TextView
            android:id="@+id/txt_confidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="true"
            android:textSize="14sp"/>

        </LinearLayout>

        <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="8dp"
          android:paddingStart="8dp"
          android:paddingEnd="8dp"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/location_result"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"/>

          <TextView
            android:id="@+id/updated_time"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/black"/>

        </RelativeLayout>

        <TextView
          android:id="@+id/address"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="8dp"
          android:paddingEnd="8dp"
          android:textColor="@android:color/black"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal"
          android:weightSum="3">

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
              android:textStyle="bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/distance_default"
              android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/distance"/>

          </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:orientation="vertical">

            <TextView
              android:textStyle="bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/time"
              android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/duration"/>

          </LinearLayout>

          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
              android:textStyle="bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/time"
              android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/avg_speed"/>

          </LinearLayout>


        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="16dp"
          android:gravity="center"
          android:orientation="horizontal">

          <ImageView
            android:id="@+id/record"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_circle"
            android:visibility="@{status == `record` ? View.VISIBLE : View.GONE}"/>

          <ImageView
            android:id="@+id/pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_pause"
            android:visibility="@{status == `pause` ? View.VISIBLE : View.GONE}"/>

          <ImageView
            android:id="@+id/refresh"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_refresh"
            android:visibility="@{status == `stop` ? View.VISIBLE : View.GONE}"/>

          <ImageView
            android:id="@+id/stop"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_stop"
            android:visibility="@{status == `stop` ? View.VISIBLE : View.GONE}"/>

        </LinearLayout>

      </LinearLayout>

    </RelativeLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>